manifests/applications/peribolos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: "Operate First's Peribolos-as-a-Service"
  creationTimestamp: null
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  name: op1st-peribolos
